<resources>
    <string name="app_name">Ticket Checker</string>
    <string name="title_trains_list">Рейсы</string>
    <string name="search_train">Поиск рейса</string>
    <string name="title_embarkation">Посадка</string>
    <string name="title_disembarkation">Высадка</string>
    <string name="station_text">Станция:</string>
    <string name="station_text_hint">Станция</string>
    <string name="qr_code_text">QR-код</string>
    <string name="scan_code_text">Штрих-код</string>
    <string name="start_embarkation">Начать посадку</string>
    <string name="list_text">Список</string>
    <string name="finish_emb_text">Закончить посадку</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="finish_emb_message">Вы уверены что хотите закончить посадку?</string>
    <string name="station_hint">Минск-Пассажирский</string>
    <string name="carriage">Вагон:</string>
    <string name="place">Место:</string>
    <string name="carriage_hint">Вагон</string>
    <string name="place_hint">Место</string>
    <string name="second_name">Фамилия:</string>
    <string name="first_name">Инициалы:</string>
    <string name="conductor_first_name">Инициалы проводника:</string>
    <string name="second_name_hint">Фамилия</string>
    <string name="first_name_hint">Инициалы</string>
    <string name="check_text">Отметить</string>
    <string name="fake_second_name">Иванов</string>
    <string name="fake_first_name">Н.Н.</string>
    <string name="add_text">Добавить</string>
    <string name="start_disembarkation">Начать высадку</string>
    <string name="finish_disemb_text">Закончить высадку</string>
    <string name="finish_disemb_message">Вы уверены что хотите закончить высадку?</string>
    <string name="from_station">Станция посадки:</string>
    <string name="to_station">Станция высадки:</string>
    <string name="from_station_hint">Минск</string>
    <string name="to_station_hint">Ратомка</string>
    <string name="cancel_text">Отмена</string>
    <string name="load_route">Загрузить маршрут</string>
    <string name="refresh_route">Обновить маршрут</string>
    <string name="send_report">Отправить отчёт </string>
    <string name="cancelled_text">Отменено</string>
    <string name="exit_reason_text">Причина высадки:</string>
    <string name="exit_reason_hint">Введите причину высадки</string>
    <string name="route">Маршрут:</string>
    <string name="route_hint">Маршрут</string>
    <string name="report_text">Отчёт</string>
    <string name="report_hint">Содержание отчёта</string>
    <string name="send_extra_report">Отправить</string>
    <string name="train_number_text">Номер поезда:</string>
    <string name="train_text">Поезд</string>
    <string name="start_route_date_text">Дата отправления</string>
    <string name="start_route_date_hint">Дата</string>
    <string name="number_carriage_text">Номера вагонов</string>
    <string name="first_carriage_text">От</string>
    <string name="second_carriage_text">До</string>
    <string name="second_conductor_name">Фамилия проводника:</string>
    <string name="load_text">Загрузить</string>
    <string name="title_trains_list_report">Дополнительный отчёт</string>
    <string name="status_text">Статус:</string>
    <string name="fake_status">Entry</string>
    <string name="start_station_text">Станция посадки:</string>
    <string name="end_station_text">Станция высадки:</string>
    <string name="extra_report_mesage">Отправить дополнительный отчёт?</string>
    <string name="extra_report_title">Дополнительный отчёт</string>
    <string name="carriage_seat_text">Вагон/Место:</string>
    <string name="fake_carriage_seat">5/91</string>
</resources>
