<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/train_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_padding"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/carriageText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="@dimen/small_padding"
                android:text="@string/carriage"
                android:textColor="@android:color/black"
                android:textSize="@dimen/regular_text_size" />

            <EditText
                android:id="@+id/carriageEditText"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/carriageText"
                android:gravity="end"
                android:inputType="numberDecimal"
                android:hint="@string/carriage_hint"
                android:textColor="@android:color/black"
                android:textSize="@dimen/regular_text_size" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/placeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="@dimen/small_padding"
                android:text="@string/place"
                android:textColor="@android:color/black"
                android:textSize="@dimen/regular_text_size" />

            <EditText
                android:id="@+id/placeEditText"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/placeText"
                android:gravity="end"
                android:inputType="numberDecimal"
                android:hint="@string/place_hint"
                android:padding="@dimen/small_padding"
                android:textColor="@android:color/black"
                android:textSize="@dimen/regular_text_size" />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/name_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/train_container"
        android:layout_margin="@dimen/small_padding"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/secondNameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="@dimen/small_padding"
                android:text="@string/second_name"
                android:textColor="@android:color/black"
                android:textSize="@dimen/regular_text_size" />

            <EditText
                android:id="@+id/secondNameEditText"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/secondNameText"
                android:gravity="end"
                android:hint="@string/second_name_hint"
                android:padding="@dimen/small_padding"
                android:textColor="@android:color/black"
                android:textSize="@dimen/regular_text_size" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/firstNameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="@dimen/small_padding"
                android:text="@string/first_name"
                android:textColor="@android:color/black"
                android:textSize="@dimen/regular_text_size" />

            <EditText
                android:id="@+id/firstNameEditText"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/firstNameText"
                android:gravity="end"
                android:hint="@string/first_name_hint"
                android:padding="@dimen/small_padding"
                android:textColor="@android:color/black"
                android:textSize="@dimen/regular_text_size" />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/stations_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_container"
        android:layout_margin="@dimen/small_padding"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/fromStationText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="@dimen/small_padding"
                android:text="@string/from_station"
                android:textColor="@android:color/black"
                android:textSize="@dimen/regular_text_size" />

            <TextView
                android:id="@+id/ftomStationEditText"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/fromStationText"
                android:gravity="end"
                android:text="@string/from_station_hint"
                android:padding="@dimen/small_padding"
                android:textColor="@android:color/black"
                android:textSize="@dimen/regular_text_size" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/stationToText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="@dimen/small_padding"
                android:text="@string/to_station"
                android:textColor="@android:color/black"
                android:textSize="@dimen/regular_text_size" />

            <EditText
                android:id="@+id/stationToEditText"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/stationToText"
                android:gravity="end"
                android:hint="@string/to_station_hint"
                android:padding="@dimen/small_padding"
                android:textColor="@android:color/black"
                android:textSize="@dimen/regular_text_size" />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:orientation="horizontal">

        <Button
            android:id="@+id/addEmbButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="@dimen/small_padding"
            android:layout_weight="1"
            android:background="@drawable/button_shape"
            android:text="@string/add_text"
            android:textAllCaps="false"
            android:textColor="@color/button_text_color" />

        <Button
            android:id="@+id/cancelEmbButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="@dimen/small_padding"
            android:layout_weight="1"
            android:background="@drawable/button_shape"
            android:text="@string/cancel_text"
            android:textAllCaps="false"
            android:textColor="@color/button_text_color" />

    </LinearLayout>

</RelativeLayout>