<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/route_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_padding"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/routeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/small_padding"
                android:text="@string/route"
                android:textColor="@android:color/black"
                android:textSize="@dimen/regular_text_size" />

            <AutoCompleteTextView
                android:id="@+id/routeTextView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/routeText"
                android:hint="@string/route_hint"
                android:focusableInTouchMode="true"
                android:singleLine="true"
                android:imeOptions="actionDone"
                android:focusable="true"
                android:textColor="@android:color/black"
                android:textSize="@dimen/regular_text_size" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/station_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/route_container"
        android:layout_margin="@dimen/small_padding"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/StationText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/small_padding"
                android:text="@string/station_text"
                android:textColor="@android:color/black"
                android:textSize="@dimen/regular_text_size" />

            <EditText
                android:id="@+id/StationEditText"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/StationText"
                android:hint="@string/station_text_hint"
                android:padding="@dimen/small_padding"
                android:textColor="@android:color/black"
                android:textSize="@dimen/regular_text_size" />
        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/ReportText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/station_container"
        android:layout_margin="@dimen/small_padding"
        android:text="@string/report_text"
        android:textColor="@android:color/black"
        android:textSize="@dimen/regular_text_size" />

    <EditText
        android:id="@+id/ReportEditText"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@+id/ReportText"
        android:layout_margin="@dimen/small_padding"
        android:background="@drawable/container_background"
        android:gravity="top|start"
        android:hint="@string/report_hint"
        android:maxLines="5"
        android:padding="@dimen/small_padding"
        android:textColor="@android:color/black"
        android:textSize="@dimen/regular_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:orientation="horizontal">

        <Button
            android:id="@+id/addReportButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="@dimen/small_padding"
            android:layout_weight="1"
            android:background="@drawable/button_shape"
            android:text="@string/send_extra_report"
            android:textAllCaps="false"
            android:textColor="@color/button_text_color" />

        <Button
            android:id="@+id/cancelReportButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="@dimen/small_padding"
            android:layout_weight="1"
            android:background="@drawable/button_shape"
            android:text="@string/cancel_text"
            android:textAllCaps="false"
            android:textColor="@color/button_text_color" />

    </LinearLayout>

</RelativeLayout>

