<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/name_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_padding"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/secondNameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingBottom="@dimen/very_small_padding"
                android:text="@string/second_name"
                android:textColor="@android:color/black"
                android:textSize="@dimen/regular_text_size" />

            <TextView
                android:id="@+id/secondNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/secondNameText"
                android:gravity="start"
                android:paddingTop="@dimen/very_small_padding"
                tools:text="@string/fake_second_name"
                android:textColor="@android:color/black"
                android:textSize="@dimen/regular_text_size" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/firstNameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingBottom="@dimen/very_small_padding"
                android:text="@string/first_name"
                android:textColor="@android:color/black"
                android:textSize="@dimen/regular_text_size" />

            <TextView
                android:id="@+id/firstNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/firstNameText"
                android:gravity="start"
                android:paddingTop="@dimen/very_small_padding"
                tools:text="@string/fake_first_name"
                android:textColor="@android:color/black"
                android:textSize="@dimen/regular_text_size" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/statusText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingBottom="@dimen/very_small_padding"
                android:text="@string/status_text"
                android:textColor="@android:color/black"
                android:textSize="@dimen/regular_text_size" />

            <TextView
                android:id="@+id/statusEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/statusText"
                android:gravity="start"
                android:paddingTop="@dimen/very_small_padding"
                tools:text="@string/fake_status"
                android:textColor="@android:color/black"
                android:textSize="@dimen/regular_text_size" />

        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_below="@+id/name_container"
        android:background="@android:color/darker_gray"
        android:layout_width="match_parent"
        android:layout_height="2dp"/>

</RelativeLayout>